[tool.poetry]
name = "flex-servo"
version = "0.1.0"
description = ""
authors = ["Aditya W <adityawardianto.19073@mhs.its.ac.id>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.3"
plotly = "^5.6.0"
ipykernel = "^6.9.1"
jupyter = "^1.0.0"
modin = {extras = ["all"], version = "^0.13.2"}

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
